--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,84 @@
+/*configuração geral*/
 body {
-    background: linear-gradient(120deg, #ffcc00, #ff6600);
+    background: linear-gradient(120deg, #ffcc00d4, #ff6600d8);
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: #fff;
+
+}
+/* configuração cabeçalho*/
+
+header {
+
+    background: linear-gradient(90deg, #ff0006, #ff3300    ); 
+    padding: 20px;
+    font-size: 20px;
+    margin: 0;
+
+}
+
+h1 {
+
+    margin: 0;
+    padding: 0;
+    font-size: 28;
+}
+
+section {
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    color: #333;
+    margin: 20px auto;
+    width: 80%;
+    border-radius: 50px;
+    box-shadow: 0px 4px 8px, rgb(0, 1, 0)
+}
+
+img {
+    width: 50%;
+    border-radius: 10px;
+    max-width: 500px ;
+    box-shadow: 0px 4px 8px rgb(0, 1, 0);
+    height: 250px;
+    
+}
+
+h2 {
+    color:#ff0006;
+
+}
+
+#modalidade {
+    margin: 20px;
+}
+
+footer{
+    background: #333;
+    padding: 10px;
+    color:#fff;
+    margin-top: 20px;
+}
+
+footer a {
+    color:#ffcc00;
+    text-decoration: none;
+}
+
+button {
+    background: #ff0066;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+button:hover{
+    background: #ff3300;
+    transform: scale(50.1);
+
 }
